# simple-video-processor

./: .gitignore  BUILD.md  CMakeLists.txt  CODE_REVIEW.md  CODE_REVIEW_CN.md  CODE_REVIEW_EN.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SUMMARY.md  config.example.json
.github/agents/: my-agent.agent.md
lib/: xlog.exp  xlog.lib
src/: project_analysis.md
src/test_class_xlog/: LogConsoleOutput.h  LogFac.cpp  LogFac.h  LogFileOutput.h  LogFileThreadOutPut.cpp  LogFileThreadOutPut.h  XConfig.cpp  log_format.h  logger.h  xlog_format.cpp  xlog_format.h
src/test_log/: test_log.cpp  test_log.sln  test_log.vcxproj
src/xlog/: LogConsoleOutput.cpp  LogFac.cpp  LogFac.h  LogFileOutput.cpp  LogFileThreadOutPut.cpp  LogFileThreadOutPut.h  XConfig.cpp  XConfig.h  log_output.h  logger.cpp  logger.h  test_class_xlog.cpp  user_input.cpp  user_input.h  xdir.cpp  xdir.h  xexec.cpp  xexec.h  xlog.cpp  xlog.h  xlog.vcxproj  xlog.vcxproj.filters
src/xvideo_edit/: fftask.cpp  fftask.h  xtask.h  xtask_factory.cpp  xtask_factory.h  xvideo_edit.cpp  xvideo_edit.sln  xvideo_edit.vcxproj  xvideo_input.cpp  xvideo_input.h
